objects/LG_Product_Attributes__mdt.object
<CustomObject>
    <fields>
        <fullName>Attribute_Category_Code__c</fullName>
        <label>Attribute Category Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Code__c</fullName>
        <label>Attribute Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Category_Id__c</fullName>
        <label>Benefit Category Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Id__c</fullName>
        <label>Benefit Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSON_Field_Location__c</fullName>
        <label>JSON Field Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSON_Field_Name__c</fullName>
        <label>JSON Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LG Product Attributes</label>
    <pluralLabel>LG Product Attributes</pluralLabel>
</CustomObject>